# rna_cloud_genome_reference

./: .dockerignore  .gitignore  Dockerfile  gadi-install.sh  main.nf  pyproject.toml  requirements.txt  run_tests.sh  run_workflow.sh
.devcontainer/: devcontainer.json
.github/workflows/: create_release.yml  pull_request.yml
conf/: sources.json
modules/: annotation_build.nf  download.nf  validate.nf
rnacloud_genome_reference/common/: utils.py
rnacloud_genome_reference/grc_fixes/: simplify_and_annotate_grc_fixes.py
rnacloud_genome_reference/validation/: report.py
rnacloud_genome_reference/validation/scripts/: validation.sh
subworkflows/: annotation_build.nf  download_genome_and_references.nf
tests/batch_run/conf/: sources.json
tests/common/: test_gnomad.py  test_utils.py
