[project]
name = "rna-cloud-genome-reference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gffutils>=0.13",
    "gitpython>=3.1.46",
    "gql>=4.0.0",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyfaidx>=0.9.0.3",
    "pysam>=0.23.3",
    "pytest>=9.0.2",
    "pytest-bdd>=8.1.0",
    "requests>=2.32.5",
    "setuptools>=82.0.1",
    "tabulate>=0.10.0",
]
